# aoc_2025

./: Cargo.toml  README.md  template.env
src/: main.rs
src/days/: d1.rs  d2.rs  d3.rs  d4.rs  d5.rs  mod.rs  template.rs
src/utils/: day.rs  fetch.rs  mock_time.rs  mod.rs
