[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
colored = "3.0.0"
dotenvy = "0.15.7"
indoc = "2.0.6"
itertools = "0.14.0"
num = "0.4.3"
paste = "1.0.15"
petgraph = "0.8.3"
phf = { version = "0.13.1", features = ["macros"] }
regex = "1.12.2"
reqwest = "0.12.24"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["full"] }
